It's Easy My DUDES!!

--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,12 @@
 <DOCTYPE! html>
+<html>
+<head>
+	<title>Hello</title>
+	</head>
+	<body>
+		<h1 style="color:red; ">Hi There</h1>
+		<p> I like Video Games! :D </p>
+		<img src="Excalibur Umbra Wallpaper.jpg" style="width:400px"><br>
+		<a href="https://en.wikipedia.org/wiki/Warframe">More Info</a>
+	</body>
+</html>
