--- a/hello.html
+++ b/hello.html
@@ -8,5 +8,13 @@
 		<p> I like Video Games! :D </p>
 		<img src="Excalibur Umbra Wallpaper.jpg" style="width:400px"><br>
 		<a href="https://en.wikipedia.org/wiki/Warframe">More Info</a>
+		<table>
+			<tr>What is ur favorite color?</tr>
+			<tr><td>Name</td><td>Answer</td></tr>
+			<tr><td>Jeff</td><td>Blue</td></tr>
+			<tr><td>Noor</td><td>Red</td></tr>
+			<tr><td>Simon</td><td>Green</td></tr>
+			<tr><td>Tamer</td><td>Orange</td></tr>
+		</table>
 	</body>
 </html>
