--- a/hello.html
+++ b/hello.html
@@ -2,19 +2,62 @@
 <html>
 <head>
 	<title>Hello</title>
+
 	</head>
 	<body>
+		<form>
+			<h1>Log In</h1>
+			<p>User Name: <input type="text"></p>
+			<p>Password: <input type="Password"></p>
+			<input type="checkbox" name="activity" value="soccer">Soccer
+			<input type="checkbox" name="activity" value="basketball">Basketball
+			<input type="checkbox" name="activity" value="board games">Board Games
+			<input type="checkbox" name="activity" value="running">Running
+			<br>
+			<input type="radio" name="Meet" value="staff">Staff
+			<input type="radio" name="Meet" value="student">Student
+			<br>
+			<input type="submit" name="submit" value="Sumbit">
+
+		</form>
 		<h1 style="color:red; ">Hi There</h1>
 		<p> I like Video Games! :D </p>
 		<img src="Excalibur Umbra Wallpaper.jpg" style="width:400px"><br>
-		<a href="https://en.wikipedia.org/wiki/Warframe">More Info</a>
-		<table>
-			<tr>What is ur favorite color?</tr>
-			<tr><td>Name</td><td>Answer</td></tr>
+		<a href="https://en.wikipedia.org/wiki/Warframe">More Info</a><br>
+		<table border="1">
+			<tr><th colspan="2">What is ur favorite color?</th></tr>
+			<tr><th style="color:blue">Name</th><th style="color:blue">Answer</th></tr>
 			<tr><td>Jeff</td><td>Blue</td></tr>
 			<tr><td>Noor</td><td>Red</td></tr>
 			<tr><td>Simon</td><td>Green</td></tr>
 			<tr><td>Tamer</td><td>Orange</td></tr>
+			<br>
+			<tr><th colspan="2">Who is ur favorite singer?</th></tr>
+			<tr><th style="color:blue">Name</th><th style="color:blue">Answer</th></tr>
+			<tr><td>Jeff</td><td>Eminem</td></tr>
+			<tr><td>Noor</td><td>Imagine Dragons</td></tr>
+			<tr><td>Simon</td><td>Lil pump</td></tr>
+			<tr><td>Tamer</td><td>Kendrick Lamar</td></tr>
+			<br>
+			<tr><th colspan="2">What pets do u have?</th></tr>
+			<tr><th style="color:blue">Name</th><th style="color:blue">Answer</th></tr>
+			<tr><td>Jeff</td><td>Cats</td></tr>
+			<tr><td>Noor</td><td>Dog</td></tr>
+			<tr><td>Simon</td><td>None</td></tr>
+			<tr><td>Tamer</td><td>Hamster</td></tr>
 		</table>
+		<ul>
+			<h2>Favorite Movies:</h2>
+			<li>The Maze Runner</li>
+			<li>Titanic</li>
+			<li>The Hulk</li>
+			<li>Iron Man</li>
+		</ul>
+		<ol type="1">
+			<h2>Favorite Books:</h2>
+			<li>Harry Potter</li>
+			<li>The Diary Of a Wimpy Kid</li>
+			<li>Death On The Nile</li>
+		</ol>
 	</body>
 </html>
