--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
 
 	</head>
 	<body>
+		<div id="form" style="background-color: black;color: white;">
 		<form>
 			<h1>Log In</h1>
 			<p>User Name: <input type="text"></p>
@@ -20,8 +21,12 @@
 			<input type="submit" name="submit" value="Sumbit">
 
 		</form>
+	</div>
+		<div class="intro">
 		<h1 style="color:red; ">Hi There</h1>
 		<p> I like Video Games! :D </p>
+	</div>
+	<div class="content">
 		<img src="Excalibur Umbra Wallpaper.jpg" style="width:400px"><br>
 		<a href="https://en.wikipedia.org/wiki/Warframe">More Info</a><br>
 		<table border="1">
@@ -59,5 +64,6 @@
 			<li>The Diary Of a Wimpy Kid</li>
 			<li>Death On The Nile</li>
 		</ol>
+	</div>
 	</body>
 </html>
